syntax = "proto3";

package miru;

import "proto/common.proto";

option go_package = "github.com/miru-project/miru-core/proto";

// DB - Detail
message GetDetailRequest {
  string package = 1;
  string detail_url = 2;
}

message GetDetailResponse { Detail detail = 1; }

message UpsertDetailRequest {
  optional string title = 1;
  optional string cover = 2;
  optional string desc = 3;
  string detail_url = 4;
  string package = 5;
  repeated string downloaded = 6;
  optional string episodes = 7; // JSON
  optional string headers = 8;  // JSON
}

message UpsertDetailResponse { Detail detail = 1; }

// DB - Favorite
message GetAllFavoriteRequest {}
message GetAllFavoriteResponse { repeated Favorite favorites = 1; }

message GetFavoriteByPackageAndUrlRequest {
  string package = 1;
  string url = 2;
}
message GetFavoriteByPackageAndUrlResponse { Favorite favorite = 1; }

message PutFavoriteByIndexRequest { repeated FavoriteGroup groups = 1; }
message PutFavoriteByIndexResponse { string message = 1; }

message PutFavoriteRequest {
  string package = 1;
  string url = 2;
  string type = 3;
  string title = 4;
  string cover = 5;
}
message PutFavoriteResponse { Favorite favorite = 1; }

message DeleteFavoriteRequest {
  string url = 1;
  string package = 2;
}
message DeleteFavoriteResponse { string message = 1; }

// Favorite Groups
message GetFavoriteGroupsByIdRequest { int32 id = 1; }
message GetFavoriteGroupsByIdResponse { repeated FavoriteGroup groups = 1; }

message GetAllFavoriteGroupRequest {}
message GetAllFavoriteGroupResponse { repeated FavoriteGroup groups = 1; }

message PutFavoriteGroupRequest {
  string name = 1;
  repeated int32 items = 2;
}
message PutFavoriteGroupResponse { FavoriteGroup group = 1; }

message RenameFavoriteGroupRequest {
  string old_name = 1;
  string new_name = 2;
}
message RenameFavoriteGroupResponse { string message = 1; }

message DeleteFavoriteGroupRequest { repeated string names = 1; }
message DeleteFavoriteGroupResponse { string message = 1; }

message GetFavoriteGroupsByFavoriteRequest {
  string package = 1;
  string url = 2;
}
message GetFavoriteGroupsByFavoriteResponse {
  repeated FavoriteGroup groups = 1;
}

// History
message GetHistoriesByTypeRequest {
  string type = 1;
  int32 page = 2;
  int32 page_size = 3;
}
message GetHistoriesByTypeResponse { repeated History histories = 1; }

message PutHistoryRequest { History history = 1; }
message PutHistoryResponse { History history = 1; }

message GetHistoryByPackageAndDetailUrlRequest {
  string package = 1;
  string detail_url = 2;
}
message GetHistoryByPackageAndDetailUrlResponse {
  repeated History history = 1;
}

message DeleteHistoryByPackageAndUrlRequest {
  string package = 1;
  string url = 2;
}
message DeleteHistoryByPackageAndUrlResponse { string message = 1; }

message DeleteAllHistoryRequest {}
message DeleteAllHistoryResponse { string message = 1; }

message GetHistorysFilteredRequest {
  string type = 1;
  string before_date = 2; // ISO8601
  int32 page = 3;
  int32 page_size = 4;
}
message GetHistorysFilteredResponse { repeated History histories = 1; }

service DbService {
  // Detail
  rpc GetDetail(GetDetailRequest) returns (GetDetailResponse);
  rpc UpsertDetail(UpsertDetailRequest) returns (UpsertDetailResponse);

  // Favorite
  rpc GetAllFavorite(GetAllFavoriteRequest) returns (GetAllFavoriteResponse);
  rpc GetFavoriteByPackageAndUrl(GetFavoriteByPackageAndUrlRequest)
      returns (GetFavoriteByPackageAndUrlResponse);
  rpc PutFavoriteByIndex(PutFavoriteByIndexRequest)
      returns (PutFavoriteByIndexResponse);
  rpc PutFavorite(PutFavoriteRequest) returns (PutFavoriteResponse);
  rpc DeleteFavorite(DeleteFavoriteRequest) returns (DeleteFavoriteResponse);

  // Favorite Group
  rpc GetFavoriteGroupsById(GetFavoriteGroupsByIdRequest)
      returns (GetFavoriteGroupsByIdResponse);
  rpc GetAllFavoriteGroup(GetAllFavoriteGroupRequest)
      returns (GetAllFavoriteGroupResponse);
  rpc PutFavoriteGroup(PutFavoriteGroupRequest)
      returns (PutFavoriteGroupResponse);
  rpc RenameFavoriteGroup(RenameFavoriteGroupRequest)
      returns (RenameFavoriteGroupResponse);
  rpc DeleteFavoriteGroup(DeleteFavoriteGroupRequest)
      returns (DeleteFavoriteGroupResponse);
  rpc GetFavoriteGroupsByFavorite(GetFavoriteGroupsByFavoriteRequest)
      returns (GetFavoriteGroupsByFavoriteResponse);

  // History
  rpc GetHistoriesByType(GetHistoriesByTypeRequest)
      returns (GetHistoriesByTypeResponse);
  rpc GetHistoryByPackageAndDetailUrl(GetHistoryByPackageAndDetailUrlRequest)
      returns (GetHistoryByPackageAndDetailUrlResponse);
  rpc PutHistory(PutHistoryRequest) returns (PutHistoryResponse);
  rpc DeleteHistoryByPackageAndUrl(DeleteHistoryByPackageAndUrlRequest)
      returns (DeleteHistoryByPackageAndUrlResponse);
  rpc DeleteAllHistory(DeleteAllHistoryRequest)
      returns (DeleteAllHistoryResponse);
  rpc GetHistorysFiltered(GetHistorysFilteredRequest)
      returns (GetHistorysFilteredResponse);
}
