syntax = "proto3";

package miru;

option go_package = "github.com/miru-project/miru-core/proto";

service MiruCoreService {
  rpc HelloMiru(HelloMiruRequest) returns (HelloMiruResponse);
  rpc GetAppSetting(GetAppSettingRequest) returns (GetAppSettingResponse);
  rpc SetAppSetting(SetAppSettingRequest) returns (SetAppSettingResponse);
  rpc Search(SearchRequest) returns (SearchResponse);
  rpc Latest(LatestRequest) returns (LatestResponse);
  rpc Detail(DetailRequest) returns (DetailResponse);
  rpc Watch(WatchRequest) returns (WatchResponse);

  // DB - Favorite
  rpc GetAllFavorite(GetAllFavoriteRequest) returns (GetAllFavoriteResponse);
  rpc GetFavoriteByPackageAndUrl(GetFavoriteByPackageAndUrlRequest)
      returns (GetFavoriteByPackageAndUrlResponse);
  rpc PutFavoriteByIndex(PutFavoriteByIndexRequest)
      returns (PutFavoriteByIndexResponse);
  rpc PutFavorite(PutFavoriteRequest) returns (PutFavoriteResponse);
  rpc DeleteFavorite(DeleteFavoriteRequest) returns (DeleteFavoriteResponse);

  // DB - Favorite Group
  rpc GetFavoriteGroupsById(GetFavoriteGroupsByIdRequest)
      returns (GetFavoriteGroupsByIdResponse);
  rpc GetAllFavoriteGroup(GetAllFavoriteGroupRequest)
      returns (GetAllFavoriteGroupResponse);
  rpc PutFavoriteGroup(PutFavoriteGroupRequest)
      returns (PutFavoriteGroupResponse);
  rpc RenameFavoriteGroup(RenameFavoriteGroupRequest)
      returns (RenameFavoriteGroupResponse);
  rpc DeleteFavoriteGroup(DeleteFavoriteGroupRequest)
      returns (DeleteFavoriteGroupResponse);
  rpc GetFavoriteGroupsByFavorite(GetFavoriteGroupsByFavoriteRequest)
      returns (GetFavoriteGroupsByFavoriteResponse);

  // DB - History
  rpc GetHistoriesByType(GetHistoriesByTypeRequest)
      returns (GetHistoriesByTypeResponse);
  rpc GetHistoryByPackageAndUrl(GetHistoryByPackageAndUrlRequest)
      returns (GetHistoryByPackageAndUrlResponse);
  rpc PutHistory(PutHistoryRequest) returns (PutHistoryResponse);
  rpc DeleteHistoryByPackageAndUrl(DeleteHistoryByPackageAndUrlRequest)
      returns (DeleteHistoryByPackageAndUrlResponse);
  rpc DeleteAllHistory(DeleteAllHistoryRequest)
      returns (DeleteAllHistoryResponse);
  rpc GetHistorysFiltered(GetHistorysFilteredRequest)
      returns (GetHistorysFilteredResponse);

  // Download
  rpc GetDownloadStatus(GetDownloadStatusRequest)
      returns (GetDownloadStatusResponse);
  rpc CancelDownload(CancelDownloadRequest) returns (CancelDownloadResponse);
  rpc ResumeDownload(ResumeDownloadRequest) returns (ResumeDownloadResponse);
  rpc PauseDownload(PauseDownloadRequest) returns (PauseDownloadResponse);
  rpc DownloadBangumi(DownloadBangumiRequest) returns (DownloadBangumiResponse);

  // Torrent
  rpc ListTorrent(ListTorrentRequest) returns (ListTorrentResponse);
  rpc AddTorrent(AddTorrentRequest) returns (AddTorrentResponse);
  rpc DeleteTorrent(DeleteTorrentRequest) returns (DeleteTorrentResponse);
  rpc AddMagnet(AddMagnetRequest) returns (AddMagnetResponse);

  // Repo
  rpc GetRepos(GetReposRequest) returns (GetReposResponse);
  rpc SetRepo(SetRepoRequest) returns (SetRepoResponse);
  rpc DeleteRepo(DeleteRepoRequest) returns (DeleteRepoResponse);
  rpc FetchRepoList(FetchRepoListRequest) returns (FetchRepoListResponse);

  // Extension Management
  rpc DownloadExtension(DownloadExtensionRequest)
      returns (DownloadExtensionResponse);
  rpc RemoveExtension(RemoveExtensionRequest) returns (RemoveExtensionResponse);

  // Network
  rpc SetCookie(SetCookieRequest) returns (SetCookieResponse);
}

message SearchRequest {
  string pkg = 1;
  string kw = 2;
  int32 page = 3;
  string filter = 4;
}

message SearchResponse { repeated ExtensionListItem items = 1; }

message LatestRequest {
  string pkg = 1;
  int32 page = 2;
}

message LatestResponse { repeated ExtensionListItem items = 1; }

message DetailRequest {
  string pkg = 1;
  string url = 2;
}

message DetailResponse {
  string data = 1; // JSON encoded for now or detailed message
}

message WatchRequest {
  string pkg = 1;
  string url = 2;
}

message WatchResponse {
  string data = 1; // JSON encoded for now or detailed message
}

message ExtensionListItem {
  string title = 1;
  string url = 2;
  string cover = 3;
  string update = 4;
}

message HelloMiruRequest {}

message HelloMiruResponse {
  repeated ExtensionMeta extensionMeta = 1;
  map<int32, DownloadProgress> downloadStatus = 2;
  TorrentStats torrent = 3;
}

message ExtensionMeta {
  string name = 1;
  string version = 2;
  string author = 3;
  string license = 4;
  string lang = 5;
  string icon = 6;
  string package = 7;
  string webSite = 8;
  string description = 9;
  repeated string tags = 10;
  string api = 11;
  string error = 12;
  string type = 13;
}

message DownloadProgress {
  int32 progress = 1;
  repeated string names = 2;
  int32 total = 3;
  string status = 4;
  string media_type = 5;
  string current_downloading = 6;
  int32 task_id = 7;
}

message TorrentStats {
  // Add detailed stats later if needed, starting with basic counts or empty for
  // now Since torrent.ClientStats is complex, we might just return summary
  // stats
  int64 total_down = 1;
  int64 total_up = 2;
}

message GetAppSettingRequest {}

message GetAppSettingResponse { repeated AppSetting settings = 1; }

message SetAppSettingRequest { repeated AppSetting settings = 1; }

message SetAppSettingResponse { string message = 1; }

message AppSetting {
  string key = 1;
  string value = 2;
}

// DB - Favorite
message Favorite {
  int32 id = 1;
  string package = 2;
  string url = 3;
  string type = 4;
  string title = 5;
  string cover = 6;
  string date = 7; // ISO8601
}

message FavoriteGroup {
  int32 id = 1;
  string name = 2;
  string date = 3; // ISO8601
  repeated Favorite favorites = 4;
}

message GetAllFavoriteRequest {}
message GetAllFavoriteResponse { repeated Favorite favorites = 1; }

message GetFavoriteByPackageAndUrlRequest {
  string package = 1;
  string url = 2;
}
message GetFavoriteByPackageAndUrlResponse { Favorite favorite = 1; }

message PutFavoriteByIndexRequest { repeated FavoriteGroup groups = 1; }
message PutFavoriteByIndexResponse { string message = 1; }

message PutFavoriteRequest {
  string package = 1;
  string url = 2;
  string type = 3;
  string title = 4;
  string cover = 5;
}
message PutFavoriteResponse { Favorite favorite = 1; }

message DeleteFavoriteRequest {
  string url = 1;
  string package = 2;
}
message DeleteFavoriteResponse { string message = 1; }

// Favorite Groups
message GetFavoriteGroupsByIdRequest { int32 id = 1; }
message GetFavoriteGroupsByIdResponse { repeated FavoriteGroup groups = 1; }

message GetAllFavoriteGroupRequest {}
message GetAllFavoriteGroupResponse { repeated FavoriteGroup groups = 1; }

message PutFavoriteGroupRequest {
  string name = 1;
  repeated int32 items = 2;
}
message PutFavoriteGroupResponse { FavoriteGroup group = 1; }

message RenameFavoriteGroupRequest {
  string old_name = 1;
  string new_name = 2;
}
message RenameFavoriteGroupResponse { string message = 1; }

message DeleteFavoriteGroupRequest { repeated string names = 1; }
message DeleteFavoriteGroupResponse { string message = 1; }

message GetFavoriteGroupsByFavoriteRequest {
  string package = 1;
  string url = 2;
}
message GetFavoriteGroupsByFavoriteResponse {
  repeated FavoriteGroup groups = 1;
}

// History
message History {
  int32 id = 1;
  string package = 2;
  string url = 3;
  string cover = 4;
  string type = 5;
  int32 episode_group_id = 6;
  int32 episode_id = 7;
  string title = 8;
  string episode_title = 9;
  int32 progress = 10;
  int32 total_progress = 11;
  string date = 12; // ISO8601
}

message GetHistoriesByTypeRequest { string type = 1; }
message GetHistoriesByTypeResponse { repeated History histories = 1; }

message GetHistoryByPackageAndUrlRequest {
  string package = 1;
  string url = 2;
}
message GetHistoryByPackageAndUrlResponse { History history = 1; }

message PutHistoryRequest { History history = 1; }
message PutHistoryResponse { History history = 1; }

message DeleteHistoryByPackageAndUrlRequest {
  string package = 1;
  string url = 2;
}
message DeleteHistoryByPackageAndUrlResponse { string message = 1; }

message DeleteAllHistoryRequest {}
message DeleteAllHistoryResponse { string message = 1; }

message GetHistorysFilteredRequest {
  string type = 1;
  string before_date = 2; // ISO8601
}
message GetHistorysFilteredResponse { repeated History histories = 1; }

// Download
message GetDownloadStatusRequest {}
message GetDownloadStatusResponse {
  map<int32, DownloadProgress> download_status = 1;
}

message CancelDownloadRequest { int32 task_id = 1; }
message CancelDownloadResponse { string message = 1; }

message ResumeDownloadRequest { int32 task_id = 1; }
message ResumeDownloadResponse { string message = 1; }

message PauseDownloadRequest { int32 task_id = 1; }
message PauseDownloadResponse { string message = 1; }

message DownloadBangumiRequest {
  string url = 1;
  string download_path = 2;
  map<string, string> header = 3;
  bool is_hls = 4;
}
message DownloadBangumiResponse {
  int32 task_id = 1;
  repeated AvailableHlsVariant variant_summary = 2;
  bool is_downloading = 3;
}

message AvailableHlsVariant {
  string resolution = 1;
  string url = 2;
  string codec = 3;
}

// Torrent
message TorrentResult {
  string info_hash = 1;
  string name = 2;
  repeated string files = 3;
}

message ListTorrentRequest {}
message ListTorrentResponse { repeated TorrentResult torrents = 1; }

message AddTorrentRequest { bytes torrent = 1; }
message AddTorrentResponse {
  string info_hash = 1;
  string detail_json = 2;
  repeated string files = 3;
}

message DeleteTorrentRequest { string info_hash = 1; }
message DeleteTorrentResponse { string message = 1; }

message AddMagnetRequest { string url = 1; }
message AddMagnetResponse {
  string info_hash = 1;
  string detail_json = 2;
  repeated string files = 3;
}

// Repo
message GetReposRequest {}
message GetReposResponse {
  string data = 1; // JSON string for now
}

message SetRepoRequest {
  string repo_url = 1;
  string name = 2;
}
message SetRepoResponse { string message = 1; }

message DeleteRepoRequest { string repo_url = 1; }
message DeleteRepoResponse { string message = 1; }

message FetchRepoListRequest {}
message FetchRepoListResponse {
  string data = 1; // JSON string for now
}

// Extension Management
message DownloadExtensionRequest {
  string repo_url = 1;
  string pkg = 2;
}
message DownloadExtensionResponse { string message = 1; }

message RemoveExtensionRequest { string pkg = 2; }
message RemoveExtensionResponse { string message = 1; }

// Network
message SetCookieRequest {
  string cookie = 1;
  string url = 2;
}
message SetCookieResponse { string message = 1; }
